--- a/project1/.vscode/launch.json
+++ b/project1/.vscode/launch.json
@@ -1,11 +1,12 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
-      "name": "Start project1",
+      "name": "Start bookinganalysis",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "npx",
-      "cwd": "${workspaceFolder}/project1",
+      "cwd": "${workspaceFolder}/bookinganalysis",
       "windows": {
         "runtimeExecutable": "npx.cmd"
       },
@@ -15,7 +16,7 @@
       ],
       "args": [
         "--open",
-        "test/flpSandbox.html#project1-tile"
+        "test/flpSandbox.html#bookinganalysis-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
@@ -24,14 +25,14 @@
       "env": {
         "DEBUG": "--inspect",
         "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
-        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1\"}"
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1/bookinganalysis\"}"
       }
     },
     {
-      "name": "Start project1 Mock",
+      "name": "Start bookinganalysis Mock",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceFolder}/project1",
+      "cwd": "${workspaceFolder}/bookinganalysis",
       "runtimeExecutable": "npx",
       "windows": {
         "runtimeExecutable": "npx.cmd"
@@ -44,7 +45,7 @@
         "--config",
         "./ui5-mock.yaml",
         "--open",
-        "test/flpSandbox.html#project1-tile"
+        "test/flpSandbox.html#bookinganalysis-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
@@ -52,14 +53,14 @@
       "port": 9229,
       "env": {
         "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
-        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1\"}"
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1/bookinganalysis\"}"
       }
     },
     {
-      "name": "Start project1 Local",
+      "name": "Start bookinganalysis Local",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceFolder}/project1",
+      "cwd": "${workspaceFolder}/bookinganalysis",
       "runtimeExecutable": "npx",
       "windows": {
         "runtimeExecutable": "npx.cmd"
@@ -72,7 +73,7 @@
         "--config",
         "./ui5-local.yaml",
         "--open",
-        "test/flpSandbox.html#project1-tile"
+        "test/flpSandbox.html#bookinganalysis-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
@@ -80,10 +81,8 @@
       "port": 9229,
       "env": {
         "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
-        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1\"}"
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/project1/project1/bookinganalysis\"}"
       }
     }
-  ],
-  "compounds": [],
-  "version": "0.2.0"
+  ]
 }
